// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render correct markup 1`] = `
<DocumentFragment>
  <form
    data-testid="article-form"
  >
    <div
      class="mt-6"
    >
      <div
        class="field"
      >
        <label
          aria-labelledby="title"
          class="label"
          for="title"
        >
          Titre
        </label>
        <div
          class="field"
        >
          <input
            class="input"
            data-testid="title"
            id="title"
            type="text"
          />
        </div>
      </div>
      <div
        class="field"
      >
        <label
          aria-labelledby="introduction"
          class="label"
          for="introduction"
        >
          introduction
        </label>
        <textarea
          aria-label="introduction"
          class="textarea"
          data-testid="introduction"
          id="introduction"
          rows="5"
        />
      </div>
      <div
        class="field"
      >
        <label
          aria-label="main"
          class="label"
          for="main"
        >
          Texte
        </label>
      </div>
      <div
        class="field"
      >
        <label
          aria-label="urlToMainIllustration"
          class="label is-inline-flex"
          for="urlToMainIllustration"
        >
          lien vers l'illustration
        </label>
        <div
          class="control"
        >
          <input
            aria-label="urlToMainIllustration"
            class="input"
            data-testid="urlToMainIllustration"
            id="urlToMainIllustration"
            type="url"
          />
        </div>
      </div>
      <div
        class="field"
      >
        <label
          aria-label="mainAudioUrl"
          class="label"
          for="mainAudioUrl"
        >
          lien audio principal
        </label>
        <div
          class="control"
        >
          <input
            aria-label="mainAudioUrl"
            class="input"
            data-testid="mainAudioUrl"
            id="mainAudioUrl"
            type="url"
          />
        </div>
      </div>
      <div>
        <h4
          class="undefined article-title_medium article-title_white mt-5 mb-4"
        >
          Ajouter des liens multimédias
        </h4>
      </div>
      <div
        class="field"
        data-testid="url-inputs-container"
      >
        <div
          class="mt-5"
        >
          <div
            class="button is-primary is-size-6 has-text-white"
            data-testid="add-url"
          >
            +
          </div>
          <div
            class="button is-primary ml-2 is-size-6 has-text-white"
            data-testid="remove-url"
          >
            -
          </div>
        </div>
      </div>
    </div>
    <div
      class="field mt-5"
    >
      <input
        class="button is-primary is-size-6 has-text-white"
        data-testid="final-submit"
        type="submit"
        value="Valider"
      />
    </div>
  </form>
</DocumentFragment>
`;

exports[`should render correct markup for update 1`] = `
<DocumentFragment>
  <form
    data-testid="article-form"
  >
    <div
      class="mt-6"
    >
      <div
        class="field"
      >
        <label
          aria-labelledby="title"
          class="label"
          for="title"
        >
          Titre
        </label>
        <div
          class="field"
        >
          <input
            class="input"
            data-testid="title"
            disabled=""
            id="title"
            type="text"
          />
        </div>
      </div>
      <div
        class="field"
      >
        <label
          aria-labelledby="introduction"
          class="label"
          for="introduction"
        >
          introduction
        </label>
        <textarea
          aria-label="introduction"
          class="textarea"
          data-testid="introduction"
          id="introduction"
          rows="5"
        />
      </div>
      <div
        class="field"
      >
        <label
          aria-label="main"
          class="label"
          for="main"
        >
          Texte
        </label>
      </div>
      <div
        class="field"
      >
        <label
          aria-label="urlToMainIllustration"
          class="label is-inline-flex"
          for="urlToMainIllustration"
        >
          lien vers l'illustration
        </label>
        <div
          class="control"
        >
          <input
            aria-label="urlToMainIllustration"
            class="input"
            data-testid="urlToMainIllustration"
            id="urlToMainIllustration"
            type="url"
          />
        </div>
      </div>
      <div
        class="field"
      >
        <label
          aria-label="mainAudioUrl"
          class="label"
          for="mainAudioUrl"
        >
          lien audio principal
        </label>
        <div
          class="control"
        >
          <input
            aria-label="mainAudioUrl"
            class="input"
            data-testid="mainAudioUrl"
            id="mainAudioUrl"
            type="url"
          />
        </div>
      </div>
      <div>
        <h4
          class="undefined article-title_medium article-title_white mt-5 mb-4"
        >
          Ajouter des liens multimédias
        </h4>
      </div>
      <div
        class="field"
        data-testid="url-inputs-container"
      >
        <div
          class="mt-5"
        >
          <div
            class="button is-primary is-size-6 has-text-white"
            data-testid="add-url"
          >
            +
          </div>
          <div
            class="button is-primary ml-2 is-size-6 has-text-white"
            data-testid="remove-url"
          >
            -
          </div>
        </div>
      </div>
    </div>
    <div
      class="field mt-5"
    >
      <input
        class="button is-primary is-size-6 has-text-white"
        data-testid="final-submit"
        type="submit"
        value="Valider"
      />
    </div>
  </form>
</DocumentFragment>
`;
